B안 영역 변경

--- a/css/main.css
+++ b/css/main.css
@@ -3,9 +3,9 @@
 @import url(header.css);
 @import url(main_banner.css);
 @import url(material.css);
-@import url(event_banner.css);
+@import url(coupon.css);
 @import url(popular_item.css);
-@import url(subscription.css);
+@import url(notice.css);
 @import url(rookie_brand.css);
 @import url(main-banner.css);
 @import url(introduction.css);
