--- a/css/main_banner.css
+++ b/css/main_banner.css
@@ -1,45 +1,84 @@
 @charset "utf-8";
 
-.banner{
-    display: block;
-    width: 100%;
-    /* height: auto; */
+.banner {
+  display: block;
+  width: 100%;
+  /* height: auto; */
 
-    margin-top: 3px;
-    /* max-width: 1100px; */
-    /* background-color: aqua; */
-    box-shadow: 0 5px 5px -5px #333;
-}
-
-.slide-area{
-    display: block;
-    width: 100%;
-    max-width: 1150px;
-    margin: 0 auto;
+  margin-top: 3px;
+  /* max-width: 1100px; */
+  /* background-color: aqua; */
+  box-shadow: 0 5px 5px -5px #333;
 }
 
-.swBanner{
-    display: block;
-    width: 100%;
-    /* height: 500px;  */
-    /* object-fit: contain; */
-    /* height: auto; */
+.slide-area {
+  display: block;
+  width: 100%;
+  max-width: 1150px;
+  margin: 0 auto;
 }
-.swBanner .swiper-slide{
-    display: block;
-    width: 100%;
-    /* height: 500px; */
-    /* object-fit: contain; */
-    /* background-color: aquamarine; */
-    /* height: auto; */
+
+.swBanner {
+  display: block;
+  width: 100%;
+  /* height: 500px;  */
+  /* object-fit: contain; */
+  /* height: auto; */
 }
-.swBanner .swiper-slide a{
-    display: block;
-    width: 100%;
-    background-color: ;
+.swBanner .swiper-slide {
+  display: block;
+  width: 100%;
+  /* height: 500px; */
+  /* object-fit: contain; */
+  /* background-color: aquamarine; */
+  /* height: auto; */
 }
-.swBanner .swiper-slide a img{
-    width: 100%;
-    /* height: 500px; */
-    /* object-fit: contain; */
+.swBanner .swiper-slide a {
+  display: block;
+  width: 100%;
+  background-color: ;
+}
+.swBanner .swiper-slide a img {
+  width: 100%;
+  /* height: 500px; */
+  /* object-fit: contain; */
+}
+
+/* 라인배너 */
+
+.line_banner {
+  display: block;
+  position: relative;
+  width: 100%;
+  max-width: 1300px;
+  margin: 0 auto;
+  padding-top: 5px;
+}
+.line_container {
+  position: relative;
+  max-width: 1300px;
+  display: block;
+}
+.line_container > a {
+  text-decoration: none;
+  color: #fff;
+  font-weight: 300;
+  width: 100%;
+  height: 100%;
+}
+
+.line_container > a > img {
+  width: 100%;
+  position: relative;
+
+}
+.line_container a> p {
+  width: 100%;
+  position: absolute;
+  top: 20%;
+  text-align: center;
+
+}
+.line_container a> p>span{
+    font-size: 14px;
 }
