--- a/css/rookie_brand.css
+++ b/css/rookie_brand.css
@@ -14,7 +14,7 @@
 h2.section-title {
   justify-content: center;
   font-size: 24px;
-  margin-bottom: 40px;
+  margin: 40px 0 40px 0;
 }
 
 .more-link {
