--- a/css/coupon.css
+++ b/css/coupon.css
@@ -10,7 +10,29 @@
 .coupon-container {
     width: 100%;
 }
-.coupon_container > a >img {
+.coupon-list > a >img {
     width: 24%;
     padding-left: 3%;
+}
+
+/* 반응형 */
+@media (max-width: 1000px) {
+    .coupon-list > a >img {
+        padding-left: 2%;
+    }
+}
+@media (max-width: 768px) {
+    .coupon-list > a >img {
+        padding-left: 1%;
+    }
+}
+@media (max-width: 600px) {
+    .coupon-list{
+        text-align: center;
+    }
+    .coupon-list > a >img {
+        width: 40%;
+        padding-left: 2%;
+        padding-bottom: 10px;
+    }
 }
