--- a/css/main.css
+++ b/css/main.css
@@ -78,10 +78,7 @@ select {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 20px;
-}
-
-.section-title h2 {
-  font-size: 24px;
-  font-weight: bold;
+  margin: 30px 0 30px 0;
+  font-size: 25px;
+  font-weight: 700;
 }
