--- a/css/popular_item.css
+++ b/css/popular_item.css
@@ -36,7 +36,11 @@
   grid-template-columns: repeat(4, 1fr);
   gap: 20px;
 }
-
+.product-grid> a{
+  text-decoration: none;
+  color: #000;
+  text-align: left;
+}
 /* 각 상품 아이템 */
 .product-item {
   background-color: #fff;
@@ -79,6 +83,9 @@
 }
 
 /* 리뷰 개수 */
+.product-item_materal-rating{ 
+  float: left;
+}
 .review-count {
   font-size: 14px;
   color: #666;
@@ -87,15 +94,15 @@
 /* 순위 배지 */
 .ranking-badge {
   position: absolute;
-  top: 10px;
+  top: 0px;
   left: 10px;
   background-color: #fdd835;
   color: #000;
-  padding: 5px 10px;
+  padding: 5px ;
   font-size: 14px;
   font-weight: bold;
   text-align: center;
-  border-radius: 3px;
+  border-radius: 2px;
   line-height: 1.2;
 }
 
@@ -136,7 +143,6 @@
       /* 리뷰 개수 */
 .review-count {
     font-size: 12px;
-    color: #666;
   }
     .more-link {
       display: block; /* 항상 블록으로 표시 */
