--- a/css/coupon.css
+++ b/css/coupon.css
@@ -10,11 +10,44 @@
 .coupon-container {
     width: 100%;
 }
-.coupon-list > a >img {
-    width: 24%;
-    padding-left: 3%;
+.coupon-list{
+    display: flex;
 }
 
+/* 호버했을때  */
+.coupon-item {
+    position: relative;
+    display: block;
+    margin: 10px;
+  }
+  
+  .coupon-item img {
+    display: block;
+    width: 100%;
+    height: auto;
+
+  }
+  
+  .coupon-item .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.6); /* 반투명 검정색 배경 */
+    color: white;
+    font-size: 28px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+ 
+  }
+  
+  .coupon-item:hover .overlay {
+    opacity: 1; /* 마우스를 올렸을 때 글씨가 보이도록 */
+  }
 /* 반응형 */
 @media (max-width: 1000px) {
     .coupon-list > a >img {
