--- a/css/main_banner.css
+++ b/css/main_banner.css
@@ -4,28 +4,27 @@
   display: block;
   width: 100%;
   /* height: auto; */
-
-  margin-top: 3px;
+  margin-top: 70px;
   /* max-width: 1100px; */
   /* background-color: aqua; */
   box-shadow: 0 5px 5px -5px #333;
 }
 
-.slide-area {
+.banner-slide-area {
   display: block;
   width: 100%;
   max-width: 1150px;
   margin: 0 auto;
 }
 
-.swBanner {
+.swiper-Banner {
   display: block;
   width: 100%;
   /* height: 500px;  */
   /* object-fit: contain; */
   /* height: auto; */
 }
-.swBanner .swiper-slide {
+.banne-slide {
   display: block;
   width: 100%;
   /* height: 500px; */
@@ -33,16 +32,40 @@
   /* background-color: aquamarine; */
   /* height: auto; */
 }
-.swBanner .swiper-slide a {
+.banne-slide > a {
   display: block;
   width: 100%;
-  background-color: ;
+  /* background-color: ; */
 }
-.swBanner .swiper-slide a img {
+.banne-slide > a > img {
   width: 100%;
   /* height: 500px; */
   /* object-fit: contain; */
 }
+.b768px {
+  display: none;
+}
+
+.b360px {
+  display: none;
+}
+
+@media (max-width: 768px){
+  .b1920px {
+    display: none;
+  }
+  .b768px {
+    display: block;
+  }
+  .slide-area{
+    max-width: 450px;
+  }
+  .b360px {
+    display: none;
+  }
+}
+
+
 /* ================================================ */
 /* 라인배너 */
 
