--- a/css/review.css
+++ b/css/review.css
@@ -2,14 +2,14 @@
 /* 리뷰 섹션 너비 100% */
 .review-section {
   width: 100%;
-  padding: 40px 0;
+  /* background-color: aquamarine; */
 }
 
 /* 컨테이너 최대 너비 1300px */
 .review-container {
   max-width: 1300px;
   margin: 0 auto;
-  padding: 0 20px;
+  padding: 20px;
 }
 .review-wrap {
   display: flex;
@@ -19,22 +19,20 @@
   gap: 20px; /* 아이템 간격 */
 }
 
-/* 섹션 타이틀 */
-h2.section-title {
-  text-align: center;
-  justify-content: center;
-  font-size: 24px;
-  margin-bottom: 40px;
-}
-
 /* 각 리뷰 아이템 스타일 */
 .review-item {
   background-color: #fff;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   padding: 20px;
+  margin: 1%;
   text-align: center;
   flex: 1;
   max-width: 300px;
+  height: auto;
+}
+
+.review-item * {
+  margin: 3px;
 }
 
 .r_title {
@@ -48,15 +46,19 @@ h2.section-title {
 }
 
 .grey {
+  max-width: 100%;
   color: #736e6e;
   font-weight: bold;
   font-size: 13px;
   margin-bottom: 2%;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .review-image {
   width: 100%;
-  height: 300px;
+  /* height: 300px; */
   object-fit: cover;
   margin-bottom: 3%;
 }
@@ -70,20 +72,6 @@ h2.section-title {
   max-width: 100%;
 }
 
-/* 스크롤 라인 스타일 */
-.scroll-line {
-  margin-top: 20px;
-  width: 100%;
-  height: 4px;
-  background-color: #ccc; /* 스크롤 라인의 배경색 */
-}
-
-/* 검은색 드래그 바 스타일 */
-.swiper-scrollbar-drag {
-  background-color: #000; /* 검은색 바 */
-  height: 100%; /* 높이를 100%로 설정해 .scroll-line 전체를 덮음 */
-  border-radius: 4px;
-}
 
 /* 1024px 이하에서 3열 레이아웃 */
 @media (max-width: 1024px) {
@@ -104,6 +92,7 @@ h2.section-title {
   .review-item {
     max-width: 100%; /* 1열을 위한 최대 너비 설정 */
     margin: 0 auto; /* 중앙 정렬 */
+    margin-bottom: 5%;
   }
 }
 
