--- a/css/main_banner.css
+++ b/css/main_banner.css
@@ -17,21 +17,17 @@
   margin: 0 auto;
 }
 
-.swiper-Banner {
-  display: block;
-  width: 100%;
-  /* height: 500px;  */
-  /* object-fit: contain; */
-  /* height: auto; */
+
+
+.swiper-Banner .swiper-slide {
+  opacity: 0; /* 기본 오파시티 값 */
+  transition: all 1.8s ; /* 오파시티 전환 효과 */
 }
-.banne-slide {
-  display: block;
-  width: 100%;
-  /* height: 500px; */
-  /* object-fit: contain; */
-  /* background-color: aquamarine; */
-  /* height: auto; */
+
+.swiper-Banner .swiper-slide-active {
+  opacity: 1; /* 활성 슬라이드에만 완전한 오파시티 적용 */
 }
+
 .banne-slide > a {
   display: block;
   width: 100%;
