--- a/css/popular_item.css
+++ b/css/popular_item.css
@@ -41,55 +41,58 @@
 .product-item {
   background-color: #fff;
   border: 1px solid #ddd;
-  padding: 20px;
+  padding: 10px;
   text-align: center;
   position: relative;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
+.product-item p{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  padding: 5px 0 5px 5px;
+  text-decoration: none;
+  color: #333;
+  font-size: 16px;
+  text-align: left;
 
+}
 .product-image {
   width: 100%;
-  /* height: 200px; */
   object-fit: cover;
-  /* margin-bottom: 1%; */
 }
 
-.product-name {
-  font-size: 16px;
-  margin: 2% 0;
-}
+.product-item >.product-brand {
+  font-size: 12px;
+  padding-top: 10px;
 
-.product-brand {
-  font-size: 16px;
+}
+.product-price{
   font-weight: bold;
-  margin: 2% 0;
-}
-
-.product-price {
-  font-size: 18px;
-  font-weight: bold;
-  margin-bottom: 10px;
-  margin: 2% 0;
 }
 
 /* 별점 아이콘 */
-.rating-icon {
-  width: 80px;
-  height: 15px;
-  margin: 2% 0;
+.popular-rating {
+  width: 100%;
+  text-align: left;
+}
+.popular-rating img{
+  width: 50%;
+  padding-left: 5px ;
 }
 
 /* 리뷰 개수 */
-.review-count {
-  font-size: 14px;
-  color: #666;
+.popular-rating > span{
+  font-size: 12px;
+;
 }
+
 
 /* 순위 배지 */
 .ranking-badge {
   position: absolute;
   top: 0px;
-  left: 10px;
+  left: 15px;
   background-color: #fdd835;
   color: #000;
   padding: 5px ;
