--- a/css/review.css
+++ b/css/review.css
@@ -29,6 +29,8 @@
   flex: 1;
   max-width: 300px;
   height: auto;
+  border: 1px solid #ddd;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .review-item * {
@@ -61,6 +63,7 @@
   /* height: 300px; */
   object-fit: cover;
   margin-bottom: 3%;
+
 }
 
 /* 텍스트 말줄임 처리 */
@@ -90,7 +93,7 @@
 /* 480px 이하에서 1열 레이아웃 */
 @media (max-width: 480px) {
   .review-item {
-    max-width: 100%; /* 1열을 위한 최대 너비 설정 */
+    max-width: 80%; /* 1열을 위한 최대 너비 설정 */
     margin: 0 auto; /* 중앙 정렬 */
     margin-bottom: 5%;
   }
@@ -99,8 +102,11 @@
 /* 360px 이하에서 1열 레이아웃 */
 @media (max-width: 360px) {
   .review-item {
-    max-width: 100%; /* 1열을 위한 최대 너비 설정 */
+    max-width: 80%; /* 1열을 위한 최대 너비 설정 */
     padding: 10px; /* 패딩 조정 */
     box-shadow: none; /* 그림자 제거 */
+  }
+  .review-image{
+    width: 100%;
   }
 }
