--- a/css/footer.css
+++ b/css/footer.css
@@ -44,4 +44,15 @@
 .footer-right a:hover {
   text-decoration: underline;
 }
+@media (max-width: 320px) {
+  .footer-container{
+  
+    display: block;
+  }
+  .footer-right{
+  padding-top: 15px;
+  }
+  .footer-right p {
+    margin: 1px 0;
 
+}}
