--- a/css/material.css
+++ b/css/material.css
@@ -120,10 +120,6 @@ padding: 5px 0 1px 0;
   padding-top: 5px;
 }
 
-.materal-rating >span{
-    font-weight: bold;
-
-}
 
 .materal-rating > img {
   width: 55%;
@@ -236,9 +232,15 @@ padding: 5px 0 1px 0;
     flex: unset; /* Flex 속성 제거 */
     width: 100%; /* 카드가 전체 너비를 차지하도록 설정 */
   }
+
   .more-link_m {
     display: block;
   }
+  .swiper-slide a > img {
+    width: %; /* 아이콘의 너비를 화면의 40%로 설정 */
+    /* height: 40px; */
+  }
+
 }
 /* ========================================================== */
 /* 소재배너 */
