--- a/css/review.css
+++ b/css/review.css
@@ -76,37 +76,14 @@
 }
 
 
-/* 1024px 이하에서 3열 레이아웃 */
-@media (max-width: 1024px) {
-  .review-item {
-    max-width: calc(33.33% - 20px); /* 3열을 위한 최대 너비 설정, 간격을 고려 */
-  }
-}
-
-/* 768px 이하에서 2열 레이아웃 */
-@media (max-width: 768px) {
-  .review-item {
-    max-width: calc(50% - 20px); /* 2열을 위한 최대 너비 설정, 간격을 고려 */
-  }
-}
 
 /* 480px 이하에서 1열 레이아웃 */
 @media (max-width: 480px) {
-  .review-item {
-    max-width: 80%; /* 1열을 위한 최대 너비 설정 */
-    margin: 0 auto; /* 중앙 정렬 */
-    margin-bottom: 5%;
-  }
+  .review-item , .review-image{
+    height: 100%;}
 }
 
 /* 360px 이하에서 1열 레이아웃 */
 @media (max-width: 360px) {
-  .review-item {
-    max-width: 80%; /* 1열을 위한 최대 너비 설정 */
-    padding: 10px; /* 패딩 조정 */
-    box-shadow: none; /* 그림자 제거 */
-  }
-  .review-image{
-    width: 100%;
-  }
+
 }
