--- a/css/footer.css
+++ b/css/footer.css
@@ -1,6 +1,5 @@
 @charset "utf-8";
 
-
 /* 푸터 전체 너비 100% */
 .footer {
   width: 100%;
@@ -17,11 +16,13 @@
   align-items: center;
   padding: 0 20px;
   position: relative;
+  gap: 20px;
 }
 /* 왼쪽 영역 스타일 */
 .footer-left {
   font-size: 12px;
   line-height: 1.7;
+  word-break: keep-all;
 }
 .footer-left p {
   margin: 5px 0;
@@ -33,6 +34,9 @@
   display: flex;
   font-size: 12px;
   line-height: 1.7;
+  align-items: flex-end;
+  text-align: right;
+  word-break: keep-all;
 }
 .footer-right p {
   margin: 5px 0;
@@ -44,15 +48,4 @@
 .footer-right a:hover {
   text-decoration: underline;
 }
-@media (max-width: 320px) {
-  .footer-container{
-  
-    display: block;
-  }
-  .footer-right{
-  padding-top: 15px;
-  }
-  .footer-right p {
-    margin: 1px 0;
 
-}}
