--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,14 @@
 @charset "utf-8";
 /* 영역별 css */
 @import url(header.css);
-@import url(video.css);
+@import url(main_banner2.css);
+@import url(main_banner.css);
 @import url(material.css);
-@import url(notice.css);
+@import url(event_banner.css);
 @import url(popular_item.css);
-@import url(coupon.css);
+@import url(subscription.css);
 @import url(rookie_brand.css);
+@import url(main-banner.css);
 @import url(introduction.css);
 @import url(review.css);
 @import url(footer.css);
@@ -89,6 +91,10 @@ h2.section-title {
   justify-content: center;
   font-size: 30px;
   margin: 10% 0;
+}
+
+html{
+  scroll-behavior: smooth;
 }
 
 /* 1024px 이하 */
