--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,11 @@
 @charset "utf-8";
 /* 영역별 css */
 @import url(header.css);
-@import url(main_banner2.css);
-@import url(main_banner.css);
+@import url(video.css);
+@import url(main.css);
 @import url(material.css);
-@import url(event_banner.css);
+@import url(coupon.css);
 @import url(popular_item.css);
-@import url(subscription.css);
 @import url(rookie_brand.css);
 @import url(main-banner.css);
 @import url(introduction.css);
@@ -15,6 +14,7 @@
 @import url(modal.css);
 @import url(fix-btn.css);
 @import url(intro.css);
+@import url(notice.css);
 /* 폰트 */
 @font-face {
   font-family: "Noto Sans KR";
