동영상 안나오는 오류 수정

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 @charset "utf-8";
 /* 영역별 css */
 @import url(header.css);
+@import url(video.css);
 @import url(main_banner2.css);
 @import url(main_banner.css);
 @import url(material.css);
@@ -15,6 +16,7 @@
 @import url(modal.css);
 @import url(fix-btn.css);
 @import url(intro.css);
+
 /* 폰트 */
 @font-face {
   font-family: "Noto Sans KR";
