--- a/css/main.css
+++ b/css/main.css
@@ -19,8 +19,8 @@
 @import url(modal.css);
 @import url(fix-btn.css);
 @import url(intro.css);
-
 @import url(notice.css);
+@import url(detail-page.css);
 
 /* 폰트 */
 @font-face {
