--- a/css/detail-page.css
+++ b/css/detail-page.css
@@ -1,99 +1,132 @@
 @charset "utf-8";
-.detile-page{
-    width: 100%;
-}
-.product-main{
-    margin-bottom: 10%;
+.detile-page {
+  width: 100%;
 }
 .detile_container {
-    max-width: 1300px;
-    margin: 0 auto;
-    padding: 20px;
-  }
-  .breadcrumb {
-    font-size: 14px;
-    color: #999;
-    margin-bottom: 20px;
-    padding-top: 100px;
+  max-width: 1300px;
+  margin: 0 auto;
+  padding: 20px;
+}
+.product-main {
+  margin-bottom: 10%;
+}
+.product-main img {
+  width: 100%;
+}
+.breadcrumb {
+  font-size: 14px;
+  color: #999;
+  margin-bottom: 20px;
+  padding-top: 100px;
 }
 
 .product-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-
 
 .product-brand {
-    font-size: 14px;
-    color: #666;
-    text-align: left;
-    margin-top: 10px;
+  font-size: 14px;
+  color: #666;
+  text-align: left;
+  margin-top: 10px;
 }
 
-.product-info  {
-    text-align: left;
-    margin-top: 20px;
-    line-height: 20px;
+.product-info {
+  text-align: left;
+  margin-top: 20px;
+  line-height: 20px;
 }
 
 .product-info > h1 {
-    font-size: 24px;
-    margin-bottom: 20px;
+  font-size: 24px;
+  margin-bottom: 20px;
 }
 
 .product-price {
-    font-size: 20px;
-    margin-bottom: 20px;
+  font-size: 20px;
+  margin-bottom: 20px;
 }
 
 .product-old-price {
-    text-decoration: line-through;
-    color: #999;
-    margin-right: 10px;
-    font-weight: 300;
-    font-size: 18px;
-    padding-top: 10px;
+  text-decoration: line-through;
+  color: #999;
+  margin-right: 10px;
+  font-weight: 300;
+  font-size: 18px;
+  padding-top: 10px;
 }
 
 .product-new-price {
-    color: #e60000;
+  color: #e60000;
 }
 
 .product-shipping-info,
 .product-shipping-cost {
-    font-size: 16px;
-    margin-bottom: 10px;
+  font-size: 16px;
+  margin-bottom: 10px;
 }
 
-.product-shipping-cost span {
-    font-weight: bold;
+.shipping-cost {
+  font-weight: bold;
+  padding-left: 2%;
+}
+.shipping-cost-info {
+  padding-left: 73px;
 }
 
+.card {
+  margin-bottom: 20px;
+  width: 100%;
+  padding: 0 20px;
+}
 /* 상품소개/브랜드 */
+.tab-container {
+    display: flex;
+    justify-content: space-around
+}
 
 .tab-button {
-    padding: 10px 20px;
-    cursor: pointer;
-    border: none;
-    background-color: #f1f1f1;
-    margin-right: 5px;
-  }
-  
-  .tab-button:hover {
-    background-color: #ddd;
-  }
+  padding: 10px;
+  cursor: pointer;
+  border: none;
+  background-color: #f1f1f100;
+}
 
-  .tab-content {
-    padding: 20px;
-    border-top: 1px solid #ddd;
-    display: flex;
-    justify-content: flex-end
-  }
 
-  .tab-content img{
-    width: 100%;
-  }
+.tab-content {
+  padding: 20px;
+  border-top: 2px solid #ddd;
+  display: flex;
+  justify-content: flex-end;
+}
+.tab-content img {
+  width: 100%;
+}
 
- 
+/* 더 보기 */
 
+/* .image-container {
+  width: 100%;
+  max-height: 500px;
+  overflow: hidden;
+  transition: max-height 0.5s ease;
+}
+
+#mainImage {
+  width: 100%;
+  display: block;
+}
+
+#loadMoreImageBtn {
+  background-color: #ffd233;
+  border-radius: 10px;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+}
+
+#loadMoreImageBtn:hover {
+  background-color: #b89723;
+} */
