--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 @charset "utf-8";
 /* 영역별 css */
 @import url(header.css);
+/* @import url(headercopy.css); */
 @import url(video.css);
 
 @import url(main_banner2.css);
