--- a/css/popular_item.css
+++ b/css/popular_item.css
@@ -72,19 +72,17 @@
 }
 
 /* 별점 아이콘 */
-.popular-rating {
-  width: 100%;
-  text-align: left;
+.rating-icon {
+  width: 100px;
+  display: flex;
 }
-.popular-rating img{
+.rating-icon img{
   width: 50%;
   padding-left: 5px ;
 }
-
 /* 리뷰 개수 */
-.popular-rating > span{
+.review-count > span{
   font-size: 12px;
-;
 }
 
 
@@ -174,8 +172,6 @@
   .product-price {
     font-size: 17px;
     font-weight: bold;
-    margin-bottom: 10px;
-    margin: 2% 0;
   }
   
   /* 별점 아이콘 */
