--- a/css/review.css
+++ b/css/review.css
@@ -16,21 +16,19 @@
   flex-direction: row;
   flex-wrap: nowrap;
   justify-content: center;
-  gap: 20px; /* 아이템 간격 */
+  gap: 15px; /* 아이템 간격 */
 }
 
 /* 각 리뷰 아이템 스타일 */
 .review-item {
   background-color: #fff;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  padding: 20px;
-  margin: 1%;
+  padding: 2%;
+  margin-bottom: 2%;
   text-align: center;
   flex: 1;
   max-width: 300px;
   height: auto;
-  border: 1px solid #ddd;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .review-item * {
@@ -63,7 +61,14 @@
   /* height: 300px; */
   object-fit: cover;
   margin-bottom: 3%;
-
+}
+.txt_wrap {
+  position: relative;
+  display: block;
+  padding: 0 15%;
+}
+.txt_wrap p {
+  margin-top: 5%;
 }
 
 /* 텍스트 말줄임 처리 */
@@ -75,15 +80,70 @@
   max-width: 100%;
 }
 
+/* 스크롤바 설정 */
+.swiper-scrollbar {
+  background-color: rgba(0, 0, 0, 0.1); /* 스크롤바의 배경색 */
+}
 
+/* 드래그 바 스타일 */
+.swiper-scrollbar-drag {
+  background-color: #000; /* 드래그 바 색상 */
+  border-radius: 4px;
+}
+
+.swiper-horizontal > .swiper-scrollbar,
+.swiper-scrollbar.swiper-scrollbar-horizontal {
+  position: absolute;
+  left: var(--swiper-scrollbar-sides-offset, 4%);
+  bottom: var(--swiper-scrollbar-bottom, -30px);
+  top: var(--swiper-scrollbar-top, auto);
+  z-index: 50;
+  height: var(--swiper-scrollbar-size, 4px);
+  width: calc(100% - 7%);
+}
+
+/* 1024px 이하에서 3열 레이아웃 */
+@media (max-width: 1024px) {
+  .review-item {
+    max-width: calc(33.33% - 20px); /* 3열을 위한 최대 너비 설정, 간격을 고려 */
+  }
+  .swiper-scrollbar.swiper-scrollbar-horizontal {
+    bottom: -86px; /* 중간 정도 위치 */
+    z-index: 9;
+}
+}
+
+/* 768px 이하에서 2열 레이아웃 */
+@media (max-width: 768px) {
+  .review-item {
+    max-width: calc(50% - 20px); /* 2열을 위한 최대 너비 설정, 간격을 고려 */
+  }
+  .swiper-scrollbar.swiper-scrollbar-horizontal {
+    bottom: -72px; /* 중간 정도 위치 */
+    z-index: 9;
+}
+  }
 
 /* 480px 이하에서 1열 레이아웃 */
 @media (max-width: 480px) {
-  .review-item , .review-image{
-    height: 100%;}
+  .review-item {
+    max-width: 100%; /* 1열을 위한 최대 너비 설정 */
+    margin: 0 auto; /* 중앙 정렬 */
+    margin-bottom: 5%;
+  }
+  .swiper-scrollbar.swiper-scrollbar-horizontal {
+    bottom: -45px; /* 중간 정도 위치 */
+  }
 }
 
 /* 360px 이하에서 1열 레이아웃 */
 @media (max-width: 360px) {
-
+  .review-item {
+    max-width: 100%; /* 1열을 위한 최대 너비 설정 */
+    padding: 10px; /* 패딩 조정 */
+    box-shadow: none; /* 그림자 제거 */
+  }
+  .swiper-scrollbar.swiper-scrollbar-horizontal {
+    bottom: -30px; /* 중간 정도 위치 */
+  }
 }
