--- a/css/fix-btn.css
+++ b/css/fix-btn.css
@@ -95,12 +95,15 @@
   border-radius: 15px;
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
 }
-
+#cartPopup > h2{
+  font-size: 14px;
+  font-weight: 500;
+}
 #cartItemsList {
-  background-color: white;
+  /* background-color: white; */
   padding: 20px;
   border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); */
 }
 
 #cartPopup button {
