--- a/css/material.css
+++ b/css/material.css
@@ -103,16 +103,17 @@
   text-decoration: none;
   color: #333;
   font-size: 16px;
+  text-align: left;
 }
 
-}
+
 
 .materal-textbox * {
-  margin: 4px 0;
+  margin: 8px 0;
 }
 .materal-textbox > p:first-child,
 .materal-rating > span {
-  font-size: 12px;
+  font-size: 14px;
 }
 
 .price_bold {
@@ -126,7 +127,7 @@
 } */
 .materal-rating {
   display: flex;
-  justify-content: center;
+  justify-content: left;
 }
 
 .materal-rating span{
@@ -154,7 +155,6 @@
 }
 
 .materal-textbox {
-
   padding: 10px;
   /* text-align: center; */
 
@@ -259,6 +259,7 @@
   }
   .materal-textbox p {
     font-size: 14px;
+    margin-bottom: 10px;
   }
 
   .swiper-slide p {
