--- a/css/popular_item.css
+++ b/css/popular_item.css
@@ -50,10 +50,10 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  padding: 5px 0 5px 5px;
+  padding: 5px 0 8px 5px;
   text-decoration: none;
   color: #333;
-  font-size: 16px;
+  font-size: 19px;
   text-align: left;
 
 }
@@ -63,7 +63,7 @@
 }
 
 .product-item >.product-brand {
-  font-size: 12px;
+  font-size: 15px;
   padding-top: 10px;
 
 }
@@ -72,17 +72,18 @@
 }
 
 /* 별점 아이콘 */
+.popular-rating{
+  padding-left: 5px;
+  text-align: left;
+  margin-bottom: 10px;
+}
 .rating-icon {
-  width: 100px;
-  display: flex;
+  width: 48%;
 }
-.rating-icon img{
-  width: 50%;
-  padding-left: 5px ;
-}
-/* 리뷰 개수 */
-.review-count > span{
-  font-size: 12px;
+
+.popular-rating > span{
+  font-size: 15px;
+  font-weight: 500;
 }
 
 
@@ -108,8 +109,8 @@
 /* 장바구니 아이콘 부분 */
 .add-to-cart {
   position: absolute;
-  bottom: 20px; /* 필요에 따라 조정 */
-  right: 20px; /* 필요에 따라 조정 */
+  bottom: 40px; /* 필요에 따라 조정 */
+  right: 15px; /* 필요에 따라 조정 */
   z-index: 10; /* 이미지 위에 표시되도록 */
 }
 
