--- a/css/coupon.css
+++ b/css/coupon.css
@@ -94,6 +94,9 @@
     padding-left: 2%;
     padding-bottom: 10px;
   }
+  .coupon-item .overlay {
+    font-size: 15px;
+  }
 }
 @media (max-width: 500px) {
   .coupon-list > a > img {
@@ -101,6 +104,6 @@
   }
   .coupon-item .overlay {
     display: block;
-    font-size: 16px;
+    font-size: 14px;
   }
 }
