--- a/css/material.css
+++ b/css/material.css
@@ -226,7 +226,7 @@
 /* 768px 이하 화면을 위한 미디어 쿼리 */
 @media (max-width: 768px) {
   .materal-textbox {
-    text-align: center;
+    text-align: left;
   }
   .material-goods-card a > img {
     height: 328.61px;
