로그인 기능 완전 구현, 쿠폰 로그인 여부 연동하여 지급, 스크롤 이벤트 수정, 검색 기능 추가,

--- a/css/main.css
+++ b/css/main.css
@@ -80,6 +80,11 @@ select {
   font-family: "Noto Sans KR", sans-serif;
 }
 
+html {
+  scroll-behavior: smooth; /* 부드러운 스크롤을 위한 CSS */
+}
+
+
 /* 초기화 */
 * {
   margin: 0;
