--- a/css/coupon.css
+++ b/css/coupon.css
@@ -6,7 +6,7 @@
   width: 100%;
   max-width: 1300px;
   margin: 0 auto;
-  padding-top: 40px;
+  padding: 40px 0px  40px  0px;
 }
 
 .coupon-container {
@@ -15,33 +15,31 @@
 
 .coupon-list {
   display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  justify-content: center;
 }
 
 /* 쿠폰 아이템 스타일 */
 .coupon-item {
+  width: calc(100% / 4 - 10px);
   position: relative;
   display: block;
-  margin: 10px;
+
 }
 
 .coupon-item img {
   display: block;
   width: 100%;
-  height: auto;
 }
 
 .coupon-item .overlay {
   position: absolute;
   top: 0;
   left: 0;
-  right: 0;
-  bottom: 0;
   background-color: rgba(0, 0, 0, 0.6); /* 반투명 검정색 배경 */
   color: white;
   font-size: 28px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   opacity: 0;
   transition: opacity 0.3s ease;
 }
@@ -74,36 +72,22 @@
   visibility: hidden; /* 가시성 숨기기 */
 }
 
-
 /* 반응형 스타일 */
 @media (max-width: 1000px) {
-  .coupon-list > a > img {
-    padding-left: 2%;
-  }
 }
 @media (max-width: 768px) {
-  .coupon-list > a > img {
-    padding-left: 1%;
+  .coupon-list {
+    width: 85%;
+    margin: auto;
+  }
+  .coupon-item {
+    width: calc(100% / 2 - 10px);
+  }
+  .coupon-item .overlay{
+    font-size: 13px;
   }
 }
 @media (max-width: 600px) {
-  .coupon-list {
-    text-align: center;
-  }
-  .coupon-list > a > img {
-    padding-left: 2%;
-    padding-bottom: 10px;
-  }
-  .coupon-item .overlay {
-    font-size: 15px;
-  }
 }
 @media (max-width: 500px) {
-  .coupon-list > a > img {
-    width: 100%;
-  }
-  .coupon-item .overlay {
-    display: block;
-    font-size: 14px;
-  }
 }
