--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,7 @@
 @import url(notice.css);
 @import url(detail-page.css);
 @import url(login.css);
+@import url(banner.css);
 
 /* 폰트 */
 @font-face {
