--- a/css/coupon.css
+++ b/css/coupon.css
@@ -6,7 +6,7 @@
   width: 100%;
   max-width: 1300px;
   margin: 0 auto;
-  padding: 40px 0px  40px  0px;
+  padding: 40px 20px  40px  20px;
 }
 
 .coupon-container {
@@ -85,6 +85,9 @@
   }
   .coupon-item .overlay{
     font-size: 13px;
+  }
+  .coupon-section {
+    padding: 40px 0px  40px  0px;
   }
 }
 @media (max-width: 600px) {
