--- a/css/fix-btn.css
+++ b/css/fix-btn.css
@@ -85,8 +85,8 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: var(--popup-width);
-  max-width: var(--popup-max-width);
+  width: 400px;
+  max-width: 400px;
   padding: var(--popup-padding);
   background-color: rgba(255, 255, 255, 0.9);
   display: none;
@@ -95,27 +95,61 @@
   border-radius: 15px;
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
 }
-
-#cartItemsList {
-  background-color: white;
-  padding: 20px;
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+.popup-content{
+  display: flex;
+  flex-direction: column
+}
+#cartPopup > .popup-content > h2 {
+  font-size: 18px;
+  font-weight: 500;
+  text-align: center;
 }
 
+#cartItemsList {
+  /* background-color: white; */
+  min-width: 360px;
+  padding: 20px;
+  border-radius: 8px;
+  /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); */
+}
+#cartItemsList  ul {
+  /* display: flex; */
+  min-width: 400px;
+}
+#cartItemsList > li {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 10px;
+}
+#cartItemsList > li > button {
+  padding: 5px;
+  margin-top: 0px;
+  font-size: 10px;
+}
+#cartItemsList > ul > li {
+  min-width: 350px;
+  display: flex;
+  justify-content: space-between;
+}
 #cartPopup button {
   margin-top: 5%;
   padding: var(--button-padding);
-  background-color: #fdd835;
-  color: white;
+  background-color: #ffd000;
+  color: #000;
   border: none;
   border-radius: 5px;
   cursor: pointer;
   transition: background-color 0.3s, transform 0.2s;
+  text-align: center;
 }
-
+.popclose{
+  text-align: center;
+  margin: 0;
+  padding: 0;
+  width: 95%;
+}
 #cartPopup button:hover {
-  background-color: #0056b3;
+  background-color: #ad8e02;
   transform: scale(1.05);
 }
 
@@ -125,8 +159,8 @@
   bottom: 20px;
   left: 50%;
   transform: translateX(-50%);
-  background-color: #fdd835;
-  color: white;
+  background-color: #ffd000;
+  color: #000;
   padding: 10px 20px;
   border-radius: 5px;
   transition: opacity 0.3s, visibility 0.3s;
@@ -178,8 +212,8 @@
   .kakao-btn-img,
   .naver-btn-img,
   .top-btn-img {
-    width: 50px; /* 기존: 45px + 5px */
-    height: 50px; /* 기존: 45px + 5px */
+    width: 50px;
+    height: 50px;
   }
   .cart-btn {
     bottom: 70px;
@@ -197,12 +231,6 @@
     transition: opacity 0.5s ease;
     display: none;
     right: 30px;
-  }
-
-  /* 소셜 아이콘 크기 조정 */
-  .social-icon {
-    width: 35px; /* 기존: 30px + 5px */
-    height: auto; 
   }
 }
 
@@ -223,8 +251,8 @@
   .kakao-btn-img,
   .naver-btn-img,
   .top-btn-img {
-    width: 45px; /* 기존: 40px + 5px */
-    height: 45px; /* 기존: 40px + 5px */
+    width: 40px;
+    height: 40px;
   }
   .cart-btn {
     bottom: 70px;
@@ -242,12 +270,6 @@
     transition: opacity 0.5s ease;
     display: none;
     right: 30px;
-  }
-
-  /* 소셜 아이콘 크기 조정 */
-  .social-icon {
-    width: 35px; /* 기존: 30px + 5px */
-    height: auto; 
   }
 }
 
@@ -275,17 +297,11 @@
   .kakao-btn-img,
   .naver-btn-img,
   .top-btn-img {
-    width: 45px; /* 기존: 40px + 5px */
-    height: 45px; /* 기존: 40px + 5px */
+    width: 40px;
+    height: 40px;
   }
   .top-btn {
     display: none !important; /* 중요한 경우 강제로 숨김 처리 */
-  }
-
-  /* 소셜 아이콘 크기 조정 */
-  .social-icon {
-    width: 35px; /* 기존: 30px + 5px */
-    height: auto; 
   }
 }
 
@@ -306,13 +322,7 @@
   .kakao-btn-img,
   .naver-btn-img,
   .top-btn-img {
-    width: 45px; /* 기존: 40px + 5px */
-    height: 45px; /* 기존: 40px + 5px */
-  }
-
-  /* 소셜 아이콘 크기 조정 */
-  .social-icon {
-    width: 35px; /* 기존: 30px + 5px */
-    height: auto; 
+    width: 40px;
+    height: 40px;
   }
 }
