--- a/css/material.css
+++ b/css/material.css
@@ -128,7 +128,7 @@
 }
 
 .materal-rating span {
-  font-weight: bold;
+  /* font-weight: bold; */
 }
 
 .materal-rating > img {
@@ -191,7 +191,7 @@
 
 .show-more {
   text-align: center;
-  margin: 20px 0;
+  margin: 1px ;
 }
 
 #showMoreButton {
@@ -260,11 +260,15 @@
   }
 
   #showMoreButton {
-    margin: 0 auto;
+    margin:  auto;
     display: block;
     border: none;
     color: #333;
     background-color: #fdd835;
+    border-radius: 20px;
+    padding: 10px;
+    font-size: 13px;
+    font-weight: 1000;
   }
 }
 
@@ -289,63 +293,3 @@
   }
 }
 
-/* 소재배너 */
-.banner {
-  border: 1px dashed #ccc;
-  display: block;
-  width: 100%;
-  /* height: auto; */
-  margin-top: 70px;
-  /* max-width: 1100px; */
-  /* background-color: aqua; */
-  z-index: 9999;
-}
-
-.banner-slide-area {
-  display: block;
-  width: 100%;
-  max-width: 1150px;
-  margin: 0 auto;
-}
-
-.swiper-Banner .swiper-slide {
-  opacity: 0; /* 기본 오파시티 값 */
-  transition: all 1.8s; /* 오파시티 전환 효과 */
-}
-
-.swiper-Banner .swiper-slide-active {
-  opacity: 1; /* 활성 슬라이드에만 완전한 오파시티 적용 */
-}
-
-.banne-slide > a {
-  display: block;
-  width: 100%;
-  /* background-color: ; */
-}
-.banne-slide > a > img {
-  width: 100%;
-  /* height: 500px; */
-  /* object-fit: contain; */
-}
-.b768px {
-  display: none;
-}
-
-.b360px {
-  display: none;
-}
-
-@media (max-width: 768px) {
-  .b1920px {
-    display: none;
-  }
-  .b768px {
-    display: block;
-  }
-  .slide-area {
-    max-width: 450px;
-  }
-  .b360px {
-    display: none;
-  }
-}
