--- a/css/popular_item.css
+++ b/css/popular_item.css
@@ -22,7 +22,7 @@
   display: block;
   font-size: 15px;
   margin-bottom: 20px;
-  color: #000;
+  color: #333;
   text-decoration: none;
 }
 
@@ -83,7 +83,8 @@
 
 .popular-rating > span{
   font-size: 15px;
-  font-weight: 500;
+  /* font-weight: 500; */
+  color: #333;
 }
 
 
@@ -153,6 +154,7 @@
 @media (max-width: 768px) {
   .product-grid {
     grid-template-columns: repeat(2, 1fr); /* 768px 이하에서는 2열 */
+    padding: 10px;
   }
 
   .product-image {
@@ -166,7 +168,7 @@
   
   .product-brand {
     font-size: 13px;
-    font-weight: bold;
+    /* font-weight: bold; */
     margin: 2% 0;
   }
   
@@ -195,11 +197,12 @@
 }
 
 /* 480px 이하 */
-@media (max-width: 480px) {
-
-  .product-image {
-    height: 152px; /* 이미지 높이 조정 */
+@media (max-width: 490px) {
+  .product-grid {
+    grid-template-columns: 1fr; 
+    padding: 10px;
   }
+
 
   .section-title {
     font-size: 20px; /* 섹션 타이틀 크기 조정 */
@@ -211,7 +214,7 @@
   
   .product-brand {
     font-size: 12px;
-    font-weight: bold;
+    /* font-weight: bold; */
     margin: 2% 0;
   }
   
@@ -228,10 +231,8 @@
 }
 
 /* 360px 이하 */
-@media (max-width: 360px) {
-  .product-grid {
-    grid-template-columns: 1fr; /* 360px 이하에서도 1열 */
-  }
+@media (max-width: 380px) {
+
 
   .product-image {
     height: 250px; /* 이미지 높이 조정 */
