--- a/css/notice.css
+++ b/css/notice.css
@@ -19,7 +19,8 @@
   padding-bottom: 30px;
   cursor: pointer;
 }
-.notice-swiper-slide > p {
+.notice-txt  > p {
+  display: block;
   padding-left: 10px;
   text-align: center;
   margin: 0 auto;
@@ -27,7 +28,7 @@
   color: #000;
 }
 
-.notice-swiper-slide > img {
+.notice-swiper-slide  img {
   width: 100%;
 }
 
